--- a/requirements.txt
+++ b/requirements.txt
@@ -6,12 +6,17 @@ Flask-Session==0.3.2
 Flask-SQLAlchemy==2.4.4
 Flask-WTF==0.14.3
 gunicorn==20.0.4
+hyperlink==21.0.0
 Jinja2==2.11.3
+multiprocess==0.70.11.1
+numpy==1.20.1
+pandas==1.2.3
+queuelib==1.5.0
+redis==3.5.3
 requests==2.25.1
-SQLAlchemy==1.3.23
+urllib3==1.26.3
 virtualenv==20.4.2
 waitress==2.0.0
-webencodings==0.5.1
 Werkzeug==1.0.1
-widgetsnbextension==3.5.1
 WTForms==2.3.3
+
